# OperationalSystems_2

./: CMakeLists.txt  README.md  client.cpp  client.h  laba5.cpp  laba5.h
Laba1/: CMakeLists.txt  README.md
Laba1/Creator/: Structure.h  creator.cpp
Laba1/Main/: CMakeLists.txt  main.cpp
Laba1/Reporter/: CMakeLists.txt  reporter.cpp
Laba1/tests/: CMakeLists.txt  test_creator.cpp  test_main.cpp
Laba2/: README.md
Laba_3a/: CMakeLists.txt  README.md
Laba_3a/Laba_3a/: CMakeLists.txt  Laba_3a.cpp  Laba_3a.h
Laba_4/: CMakeLists.txt  README.md
Laba_4/Laba_4/: CMakeLists.txt  Laba_4.cpp  Laba_4.h
Laba_4/Sender/: CMakeLists.txt  Sender.cpp  Sender.h
